--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <title>Download Covid Satellite</title>
     <link rel="icon" href="assets/ic.ico?" type="image/x-icon">
-    
+
 
     <style>
         .outer {
@@ -64,16 +62,13 @@
     <div class="outer">
         <div class="middle">
             <div class="inner">
-                <h1 class="head"
-                    style="vertical-align: middle;">Download App</h1>
-                <h2 style="margin-top: 20px;"
-                    class="lead">This website was set up just to download the app, nothing fancy here :)</h2>
-                <a href="https://github.com/benacq/covidapp"
-                    style="font-size: 18px;">Check the github repository for the source code</a><br>
-                <a href="./android/covid-satellite.apk"
-                    style="font-size: 18px; margin-top: 50px;"
-                    class="btn btn-primary"
-                    download>Dowload</a>
+                <h1 class="head" style="vertical-align: middle;">Download App</h1>
+                <h2 style="margin-top: 20px;" class="lead">This website was set up just to download the app, nothing
+                    fancy here :)</h2>
+                <a href="https://github.com/benacq/covid-satellite" style="font-size: 18px;">Check the github repository
+                    for the source code</a><br>
+                <a href="./android/covid-satellite.apk" style="font-size: 18px; margin-top: 50px;"
+                    class="btn btn-primary" download>Dowload</a>
             </div>
         </div>
     </div>
